--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	"main": "./index.js",
 	"browser": "",
 	"unpkg": "",
-	"types": "",
+	"types": "./index.d.ts",
 	"typesVersions": {},
 	"dependencies": {
 		"cross-spawn": "^7.0.3"
