--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "2.0.7",
+	"version": "2.0.8",
 	"license": "ISC",
 	"name": "@clevercanyon/spawn-please.fork",
 	"description": "Promisified child_process.spawn.",
@@ -11,7 +11,9 @@
 	"homepage": "https://github.com/clevercanyon/spawn-please.fork#readme",
 	"bugs": "https://github.com/clevercanyon/spawn-please.fork/issues",
 	"funding": "https://github.com/sponsors/clevercanyon",
-	"keywords": ["clevercanyon"],
+	"keywords": [
+		"clevercanyon"
+	],
 	"author": {
 		"name": "Raine Revere",
 		"url": "https://github.com/raineorshine"
@@ -23,7 +25,10 @@
 		}
 	],
 	"type": "commonjs",
-	"files": ["/index.js", "/index.d.ts"],
+	"files": [
+		"/index.js",
+		"/index.d.ts"
+	],
 	"bin": {},
 	"imports": {},
 	"exports": null,
@@ -46,8 +51,14 @@
 	},
 	"overrides": {},
 	"workspaces": [],
-	"cpu": ["x64", "arm64"],
-	"os": ["darwin", "linux"],
+	"cpu": [
+		"x64",
+		"arm64"
+	],
+	"os": [
+		"darwin",
+		"linux"
+	],
 	"engines": {
 		"node": "^19.2.0 || ^19.4.0",
 		"npm": "^8.19.3 || ^9.2.0"
