Project update. [p][robotic]

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Wed, Sep 20, 2023, 10:17:00 PM EDT.
+# Last generated Thu, Sep 21, 2023, 3:58:14 AM EDT.
 
 # Default
 
