--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Thu, Sep 21, 2023, 6:00:40 AM EDT.
+# Last generated Wed, Sep 27, 2023, 6:50:02 PM EDT.
 
 # Locals
 
