--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Fri, Sep 29, 2023, 7:04:21 PM EDT.
+# Last generated Sat, Sep 30, 2023, 9:36:02 AM EDT.
 
 # Default
 
