--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Sat, Sep 30, 2023, 9:36:02 AM EDT.
+# Last generated Sat, Sep 30, 2023, 12:56:57 PM EDT.
 
 # Default
 
