Project update. [p][robotic]

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Wed, Oct 4, 2023, 7:57:03 PM EDT.
+# Last generated Mon, Oct 9, 2023, 8:27:05 AM EDT.
 
 # Default
 
