--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 8:57:46 AM EDT.
+# Last generated Mon, Oct 9, 2023, 5:43:13 PM EDT.
 
 # Locals
 
