--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 9:54:28 PM EDT.
+# Last generated Thu, Oct 19, 2023, 10:35:20 AM EDT.
 
 # Locals
 
