--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "2.0.65",
+    "version": "2.0.66",
     "license": "ISC",
     "name": "@clevercanyon/spawn-please.fork",
     "description": "Promisified child_process.spawn.",
@@ -42,14 +42,14 @@
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.254"
+        "@clevercanyon/dev-deps": "^1.0.263"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
-        "node": "^19.1.0 || ^20.5.0",
-        "npm": "^8.19.3 || ^9.8.0 || ^10.0.0"
+        "node": "^20.5.0 || ^20.9.0",
+        "npm": "^9.8.0 || ^10.1.0"
     },
     "config": {
         "c10n": {
