--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 8, 2024 2:18 PM UTC.
+# Last generated Apr 11, 2024 1:00 AM UTC.
 
 [production]
 node >= 20.9.0
